<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp"
    android:tag="Contacts" >

    <LinearLayout
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:weightSum="2" >

        <EditText
            android:id="@+id/edtFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/textdigits"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/firstname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtLName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/textdigits"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/lastname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameField"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/edtMail"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/your_message"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:padding="8dp" />

    <LinearLayout
        android:id="@+id/submitField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMessage"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F75151"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>