<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_layout_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp" >

        <Button
            android:id="@+id/btnDown"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/commun_red"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/download"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnDown"
            android:layout_marginTop="5dp"
            android:background="@color/commun_red"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/open"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/baseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_layout_bg"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="visible" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- ListRow Left sied image -->

            <RelativeLayout
                android:id="@+id/thumbnail"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/image_bg" >

                <com.jskaleel.fte.common.TouchHighlightImageView
                    android:id="@+id/ivBookImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/imageview"
                    android:scaleType="centerCrop" />

                <ProgressBar
                    android:id="@+id/ivProgress"
                    style="?android:attr/progressBarStyleSmallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <!-- Title Of Book -->

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/thumbnail"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:text=""
                android:textColor="@color/txtTitleColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Author Name -->

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/thumbnail"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/txtAuthorColor"
                android:textSize="12sp" />

            <!-- Rightend Arrow -->

            <Button
                android:id="@+id/btnDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/thumbnail"
                android:layout_alignParentRight="true"
                android:background="@android:drawable/ic_menu_share"
                android:padding="5dp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>